--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST='54.233.129.48'
-DB_USER='ubuntu'
+DB_HOST='localhost'
+DB_USER='root'
 DB_PASSWORD='mysql_EC2'
-DB_DATASE='teste'
-PORT='3000'
+DB_DATABASE='teste'
+SERVER_PORT='3000'
+DB_PORT='33306'
