--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_HOST='localhost'
 DB_USER='root'
 DB_PASSWORD='mysql_EC2'
 DB_DATABASE='teste'
-SERVER_PORT='3000'
-DB_PORT='33306'
+SERVER_PORT=3000
+DB_PORT=33306
