--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST='localhost'
 DB_USER='root'
 DB_PASSWORD='mysql_EC2'
-DB_DATABASE='teste'
+DB_DATABASE='foco'
 SERVER_PORT=3000
 DB_PORT=33306
